# talPYot

./: AmidaAngle_OLD.py  READ.md  README.md  pyproject.toml  setup.py
talPYot/: main.py  talPYot.py
talPYot.egg-info/: PKG-INFO  SOURCES.txt
